--- a/stories-cover.tex
+++ b/stories-cover.tex
@@ -56,12 +56,12 @@
   \newfontfamily\secfont{Charter Black}
   \newfontfamily\handfont{Bradley Hand}
 
-\setlength{\paperwidth}{14.194in}
+\setlength{\paperwidth}{14.125in}
 \setlength{\paperheight}{9.861in}
 \pdfpagewidth=\paperwidth
 \pdfpageheight=\paperheight
 
-\setlength{\textwidth}{14.194in}
+\setlength{\textwidth}{13.014in}
 \setlength{\textheight}{9.861in}
 \setlength{\oddsidemargin}{-0.75in}
 \setlength{\evensidemargin}{-0.75in}
@@ -99,7 +99,7 @@
   \centering
   \mbox{ } \hfill
   \begin{minipage}{3in}
-    \vspace*{-4in}
+    \vspace*{-6.5in}
     \sffamily{\bfseries About the Author}
     \\[4pt]
     Carol Carpenter's poems and stories have appeared in numerous online and
@@ -116,10 +116,12 @@ trainer, she now writes full-time in Livonia, Michigan.
 \\[2pt]
 \mbox{} \hfill {--- Muddy River Poetry Review}, 2010
 \end{minipage}%
-\hfill\mbox{ }
+\hfill\mbox{ }\hspace*{0.25in}
 \end{minipage}%
-\hspace*{-0.125in}
-\begin{minipage}[t][9.861in][t]{0.944in}
+%
+\hspace*{-0.125in}%
+%
+\begin{minipage}[t][9.861in][t]{0.875in}
     \rotatebox{90}{%
        {\fontsize{40}{40}\sffamily\bfseries stories
          $\mid$ carol carpenter}
@@ -133,11 +135,11 @@ trainer, she now writes full-time in Livonia, Michigan.
   \\[-10pt]
   \hrule height 1pt
   \vspace*{2pt}
-  \hspace*{3in} {\fontsize{24}{52}\sffamily carol carpenter} \qquad
+  \hspace*{3.115in} {\fontsize{24}{52}\sffamily carol carpenter} \qquad
   \\[5.5in]
   \hspace*{3.625in} {\sffamily\large colloquial publishing} \qquad
   \\
-  \hspace*{3.625in} {\sffamily new york} \qquad
+  \hspace*{4.585in} {\sffamily new york} \qquad
 \end{minipage}
 \end{document}
 
