--- a/stories.tex
+++ b/stories.tex
@@ -94,10 +94,11 @@
 % TITLE
 % ======================================================================
 \begin{document}
-\frontmatter
 \pagestyle{empty}
-\pagecolor{darkvintageorange}
-\color{white} % Sets the text color to white
+\cleardoublepage
+\mbox{ }
+\cleardoublepage
+\frontmatter
 \begin{center}
   \vspace*{48pt}
   \hfill {\fontsize{86}{52}\sffamily\bfseries stories}
@@ -1031,7 +1032,7 @@ wear for luck. I solve algebraic equations, where x equals y squared and
 unknowns become known. Answers are right, teachers say, or wrong,
 depending on the answer key. I hope for multiple choice, a chance. When
 I check Patrick's papers, I give him a couple of points for trying.
-Trying to kiss me with mother flicking the porchlight off and on like
+Trying to kiss me with mother flicking the porch light off and on like
 some lightning bug. Still, his fingers touch bare breast and rest, a
 period on the page.
 
@@ -1866,7 +1867,7 @@ everything.''
 
 ``Yeah,'' my dad mutters. ``Those things are taking over the
 campgrounds. Last summer a long silver job came roaring in at night.
-Levelled our tent just like that,'' and Dad snaps his fingers.
+Leveled our tent just like that,'' and Dad snaps his fingers.
 
 ``It was the best part of the vacation,'' I say. ``We talked about it
 for days. I mean, what if we'd been in there sleeping?''
@@ -3699,7 +3700,7 @@ posts on the refrigerator.
 ``It's your life. Guess if you're determined to do yourself in, isn't
 any way I can stop you.'' Rayna glances out her kitchen window, checks
 the thermometer she got free at Grady's hardware and tacked to the
-birdfeeder, close enough for reading, for seeing what kind of day she
+bird feeder, close enough for reading, for seeing what kind of day she
 can expect. Hotter than normal today, near 70 degrees already and humid.
 Miami is probably cooler with the ocean breeze.
 
@@ -4228,7 +4229,7 @@ interested in something else first.'' That's why last summer Bradford
 never finished putting the eaves on the lop-sided gazebo that had an
 overhanging roof on only one side of the octagon. Of course, no sense in
 painting it until the eaves were up. Not that it was Bradford's fault
-since Glenda next door you-hooed him right on over to fix her garbage
+since Glenda next door yoo-hooed him right on over to fix her garbage
 disposal just as he was getting ready to go to Home Depot to get the
 eaves he should have gotten when he bought the wood to build that stupid
 gazebo that none of us wanted anyway except him.
@@ -5369,7 +5370,7 @@ something about the place that's gotten into my blood.
 
 After a week of hanging around Trapper's Alley, I'm now one of the
 regular crazies. We're all here today. Prometheus with his magic torch
-that joins glass and metal. Appollo drawing her circles and filling them
+that joins glass and metal. Apollo drawing her circles and filling them
 in with yellows and oranges. Mr. Antilopolis selling popcorn from his
 red and white cart. The old woman playing the piano, drinking beer from
 a paper cup. And all the rest who open their suitcases and sell coin
@@ -5499,7 +5500,7 @@ drop a bag of pop­corn he's handing to a tourist.
 
 ``Don't worry. The pigeons will eat it,'' the old woman says.
 
-Appollo wipes her hands on her smock and takes Mr. Antilopolis' other
+Apollo wipes her hands on her smock and takes Mr. Antilopolis' other
 hand. The growing line grabs a man from the crowd. Then Prometheus, who
 pushes up his goggles and turns off the torch. I play faster. The line
 swerves in between the tourists, picks up more people. The old woman
@@ -6421,7 +6422,7 @@ hands look right for growing ivy.
 
 Mr. Bertilano leans across the desk toward me and balances the pencil
 until the pen falls. Sets it up again. He's the boy with the erector
-set. Tighten the bolts. Call in the girlchild to ``ooh'' and ``ah.'' She
+set. Tighten the bolts. Call in the girl child to ``ooh'' and ``ah.'' She
 can use the wrench only after he shows her how.
 
 I know why he calls me into his office today. I've been expecting it,
@@ -7790,7 +7791,12 @@ Mama you can't stay, at least not yet.''
 ``You do that,'' I say, waving and smiling at Marilyn as she walks
 away.''
 
-***
+{
+  \large
+\begin{center}
+  $\star \ \ \star \ \ \star$
+\end{center}
+}
 
 The post cards I write to Marilyn and Mama from other cities, other
 states, are brief. There's not much to say. But sometimes I do think
@@ -7936,7 +7942,7 @@ your legs. Disgusting, if you ask me. All those varicose veins and
 you're not even wearing hose.''
 
 ``No one says fiddlesticks anymore.'' Eartha taps her long red-lacquered
-fingernails against the table---clickety-clack, clickity-clack until I
+fingernails against the table---clickety-clack, clickety-clack until I
 can't stand her sound anymore---and then I see a silver star flash at
 the tip of one nail and grab her fingers.
 
@@ -8582,9 +8588,9 @@ forty years. He had no choice, he said; his wife counted on him.
 Betty counted on no one except herself. All 300 pounds of her flesh
 anchored her to her lawn chair on her rotted front porch. Boards were
 broken, slanting down, missing. A chipped ceramic bowl rimmed in red and
-full of peapods from her garden rested in her lap. She snapped the first
-peapod like it was Charlie's finger, the one that used to stroke the
-surgical scar on her breast. Then, she emptied the other peapods,
+full of pea pods from her garden rested in her lap. She snapped the first
+peeped like it was Charlie's finger, the one that used to stroke the
+surgical scar on her breast. Then, she emptied the other pea pods,
 setting up a rhythm---snap, snap, snap.
 
 She adjusted her glasses, watched the demolition of the boarded-up house
@@ -9033,7 +9039,7 @@ what I'm sayin'?
 hard in the head. ``Here, go hang these weeds.''
 
 I done like he said cause we was friends. ``Wanna go get us some of them
-catfish from the River tomorrow? Have us a down home fishfry?''
+catfish from the River tomorrow? Have us a down home fish fry?''
 
 ``Ain't had me none of them since last month,'' Sinker said, wipin'
 sweat from his head. ``Cooler there by the Deee-troit River. Let's go.''
@@ -9041,7 +9047,7 @@ sweat from his head. ``Cooler there by the Deee-troit River. Let's go.''
 ``Tomorrow,'' I says as the sun drop further and the moon start
 climbin'. ``Don't have our rods,'' I remind him.
 
-``Makes no nevermind. We borrow some rods,'' and he laughs like mama's
+``Makes no never mind. We borrow some rods,'' and he laughs like mama's
 boyfriend.
 
 When we gets down there, Sinker grab us two rods right off. No one says
@@ -9185,5 +9191,15 @@ myself tell her. ``Your very best ever.''
 ``For you, my friend,'' Danielle said. ``I listen. I paint your dream
 over with white. You see with your own eyes how it is love I paint, not
 entrapment.''
+
+\clearpage
+\pagestyle{empty}
+\mbox{ }
+
+\cleardoublepage
+\mbox{ }
+
+\clearpage
+\mbox{ }
 
 \end{document}
