--- a/stories.tex
+++ b/stories.tex
@@ -9199,7 +9199,12 @@ entrapment.''
 \cleardoublepage
 \mbox{ }
 
-\clearpage
+\cleardoublepage
 \mbox{ }
 
+\cleardoublepage
+\mbox{ }
+
+\clearpage
+\mbox{ }
 \end{document}
