adjust for std paper

--- a/stories-cover.tex
+++ b/stories-cover.tex
@@ -53,12 +53,12 @@
   \newfontfamily\secfont{Charter Black}
   \newfontfamily\handfont{Bradley Hand}
 
-\setlength{\paperwidth}{14.125in}
+\setlength{\paperwidth}{13.944in}
 \setlength{\paperheight}{9.861in}
 \pdfpagewidth=\paperwidth
 \pdfpageheight=\paperheight
 
-\setlength{\textwidth}{14.125in}
+\setlength{\textwidth}{13.944in}
 \setlength{\textheight}{9.861in}
 \setlength{\oddsidemargin}{-1in}
 \setlength{\evensidemargin}{-1in}
@@ -112,8 +112,9 @@ trainer, she now writes full-time in Livonia, Michigan.
 \hfill\mbox{ }\hspace*{0.25in}
 \end{minipage}%
 %
+\hspace*{-0.125in}
 %
-\begin{minipage}[t][9.861in][t]{0.875in}
+\begin{minipage}[t][9.861in][t]{0.694in}
    \hspace*{0.125in}%
     \rotatebox{90}{%
        {\fontsize{40}{40}\sffamily\bfseries stories
@@ -126,8 +127,8 @@ trainer, she now writes full-time in Livonia, Michigan.
   \vspace*{-6in} \mbox{ }
   \\
   \hspace*{1.625in} {\fontsize{86}{52}\sffamily\bfseries stories} \qquad
-  \\[-10pt]
-  \hrule height 1pt
+  \\[-4pt]
+  \hspace*{1in}\rule{4.375in}{1.5pt}%  \hrule height 1pt
   \vspace*{2pt}
   \hspace*{3.115in} {\fontsize{24}{52}\sffamily carol carpenter} \qquad
   \\[5.5in]
@@ -135,8 +136,8 @@ trainer, she now writes full-time in Livonia, Michigan.
   \\
   \hspace*{4.585in} {\sffamily new york} \qquad
 \end{minipage}
-\vspace*{-10in}
-\hspace*{-24in}
+\vspace*{-8in}
+\hspace*{-20in}
 \end{document}
 
 
